[project]
name = "i18n-invenio-formatter"
version = "0.1.0"
description = "A command-line tool to automatically convert Python string formatting in InvenioRDM translation calls (_()) from new-style {} and f-strings to old-style %() formatting, ensuring compatibility with InvenioRDM's i18n system."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
